src/modules/portfolio/components/performance-graph/performance-graph.styles.less
@import (reference) '~assets/styles/shared';

.PerformanceGraph {
  :global {
    .highcharts-container {
      min-width: 100%;
      position: relative;
      top: -0.65rem;

      > svg {
        width: 100%;
      }
    }
  }
}

.PerformanceGraph__SortBar {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  width: 100%;
}

.PerformanceGraph__SortBar-title {
  &:extend(.caps--small);

  flex: 1;
  font-weight: 500;
}

.PerformanceGraph__SortBar-dropdowns {
  display: flex;

  > div > button:first-child {
    &:extend(.caps--small);

    color: @color-white;
    font-weight: 500;
  }
}

